Fixing fonts, Adding left/right aligned footer sections, simplifying post link construction

--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -10,9 +10,9 @@
     font-family: 'Colfax-Regular';
     src: url('/fonts/Colfax-Regular.eot?#iefix') format('embedded-opentype'),
          url('/fonts/Colfax-Regular.otf') format('opentype'),
-	     url('/fonts/Colfax-Regular.woff') format('woff'),
-	     url('/fonts/Colfax-Regular.ttf') format('truetype'),
-	     url('/fonts/Colfax-Regular.svg#Colfax-Regular') format('svg');
+         url('/fonts/Colfax-Regular.woff') format('woff'),
+         url('/fonts/Colfax-Regular.ttf') format('truetype'),
+         url('/fonts/Colfax-Regular.svg#Colfax-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -20,11 +20,11 @@
 /* Colfax Regular Italic */
 @font-face {
   font-family: 'Colfax-RegularItalic';
-  src: url('Colfax-RegularItalic.eot?#iefix') format('embedded-opentype'),
-       url('Colfax-RegularItalic.otf') format('opentype'),
-	   url('Colfax-RegularItalic.woff') format('woff'),
-	   url('Colfax-RegularItalic.ttf') format('truetype'),
-	   url('Colfax-RegularItalic.svg#Colfax-RegularItalic') format('svg');
+  src: url('/fonts/Colfax-RegularItalic.eot?#iefix') format('embedded-opentype'),
+       url('/fonts/Colfax-RegularItalic.otf') format('opentype'),
+       url('/fonts/Colfax-RegularItalic.woff') format('woff'),
+       url('/fonts/Colfax-RegularItalic.ttf') format('truetype'),
+       url('/fonts/Colfax-RegularItalic.svg#Colfax-RegularItalic') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -32,11 +32,11 @@
 /* Colfax Medium */
 @font-face {
   font-family: 'Colfax-Medium';
-  src: url('Colfax-Medium.eot?#iefix') format('embedded-opentype'),
-       url('Colfax-Medium.otf') format('opentype'),
-	   url('Colfax-Medium.woff') format('woff'),
-	   url('Colfax-Medium.ttf') format('truetype'),
-	   url('Colfax-Medium.svg#Colfax-Medium') format('svg');
+  src: url('/fonts/Colfax-Medium.eot?#iefix') format('embedded-opentype'),
+       url('/fonts/Colfax-Medium.otf') format('opentype'),
+       url('/fonts/Colfax-Medium.woff') format('woff'),
+       url('/fonts/Colfax-Medium.ttf') format('truetype'),
+       url('/fonts/Colfax-Medium.svg#Colfax-Medium') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -51,18 +51,15 @@
 .italic { font-family:'Colfax-RegularItalic'; font-style:normal; }
 
 body {
-	background:#ccc; /* For footer */
+    background:#ccc; /* For footer */
 }
 
 main {
-	background: #fff; /* Override body bg color for footer */
-	padding-top:5em;
-	padding-bottom:3em;
-	.category { text-transform:capitalize; }
+    padding-top:5em; padding-bottom:3em;
+    background: #fff; /* Override body bg color for footer */
+    .category { text-transform:capitalize; }
 }
 
 footer {
-	padding:2em;
-	text-align:center;
-	background: #ccc;
+    padding:2em; text-align:center; background: #ccc;
 }
